--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #999;
 }
 
 code {
@@ -55,8 +56,25 @@ main {
   height: 100%;
   width: calc(100% - 280px);
   min-width: calc(1150px - 280px);
+  font-size: 1.2em;
+  color: #999;
 }
-  
+
+main header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #d4d4d4;
+  margin-bottom: 20px;
+}
+
+main header h1 {
+  color: #4B5B60;
+  margin-bottom: 0;
+  font-size: 2em;
+}
+
 aside.side-nav {
   position: absolute;
   height: 100%;
@@ -90,4 +108,99 @@ aside.side-nav {
   padding: 5px 13px;
   font-size: 1.3em;
   border-radius: 3px;
+}
+
+/*************************/
+/*       MODAL STYLES    */
+/************************/
+
+.modal {
+  display: block;
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(51,51,51,0.8);
+  background:rgba(0,0,0,.7);
+  overflow: auto;
+}
+
+.modal-content {
+  position: relative;
+  
+  max-width: 800px;
+  top: calc(50% - 60px);
+  bottom: 0;
+  left: calc(50% - 400px);
+  height: auto;
+  
+  padding: 3%;
+  border-radius: 6px;
+  text-align: center;
+  background: #fff;
+
+  display: grid;
+
+  grid-template-rows: auto;
+  grid-gap: 10px;
+}
+
+.modal-content h2 {
+  margin: 10px 0 15px;
+  padding: 0;
+}
+
+.modal-content-wrapper {
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.30);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.30);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.30);
+  border-radius: 6px;
+  padding: 10px;
+}
+
+.modal .form-control {
+  display: flex;
+  justify-content: flex-start;
+  border: none;
+  box-shadow: none;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.modal .form-control label:first-child,
+.modal .form-control input:first-child {
+  margin-right: 10px;
+}
+
+.modal .form-control label:first-child {
+  width: 100px;
+  text-align: right;
+}
+
+.modal .form-control.billable input {
+  margin-left: 105px;
+}
+
+.modal .form-control.action-buttons {
+  justify-content: flex-end;
+}
+
+.modal .form-control.action-buttons button:first-of-type {
+  margin-right: 20px;
+}
+
+.modal .form-control input, 
+.modal .form-control select {
+  height: 30px;
+}
+
+
+.modal .form-control input:not([type="checkbox"]), 
+.modal .form-control select {
+  border-radius: 5px;
+  width: 250px;
 }
