added SecondarySideNav, adjusted affected app-wide styles

--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ a {
 
 main {
   margin: 0;
-  padding: 20px;
+  padding: 0;
   background: #eaeaea;
   position: absolute;
   top: 0;
@@ -64,14 +64,14 @@ main header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 20px;
+  margin: 0;
+  padding: 20px;
   border-bottom: 1px solid #d4d4d4;
-  margin-bottom: 20px;
 }
 
 main header h1 {
   color: #4B5B60;
-  margin-bottom: 0;
+  margin: 0;
   font-size: 2em;
 }
 
@@ -91,6 +91,26 @@ aside.side-nav {
 }
 
 
+/**************************/
+/*    CONTENT WRAPPERS    */
+/**************************/
+
+.content-wrapper {
+  margin: 20px;
+}
+
+.leftSideBar-and-content-wrapper {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  height: 100%;
+}
+
+.rightSideBar-and-content-wrapper {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  height: 100%;
+}
+
 /*************************/
 /*       PAGINATION     */
 /************************/
@@ -98,10 +118,12 @@ aside.side-nav {
 .pagination {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
+  margin: 20px 0;
 }
 
 .pagination div {
-  margin: 0 20px 0 0;
+  margin-right: 20px;
 }
 
 .pagination button {
