started NewExpenseForm modal

--- a/src/styles/reports.css
+++ b/src/styles/reports.css
@@ -170,8 +170,14 @@
 }
 
 
+/*************************/
+/* MODAL  */
+/************************/
 
 
-
+.modal-content {
+  width: 530px;
+  left: calc(50% - 235px);
+}
 
 
