--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ main header h1 {
 }
 
 .form-control label:first-child {
-  width: 100px;
+  width: 70px;
   text-align: right;
 }
 
@@ -180,7 +180,7 @@ main header h1 {
 
 .modal {
   display: block;
-  display: none;
+  /* display: none; */
   position: fixed;
   top: 0;
   bottom: 0;
@@ -196,10 +196,10 @@ main header h1 {
 .modal-content {
   position: relative;
   
-  max-width: 800px;
-  top: calc(50% - 60px);
+  /* max-width: 800px; */
+  top: 40px;
   bottom: 0;
-  left: calc(50% - 400px);
+  /* left: calc(50% - 400px); */
   height: auto;
   
   padding: 3%;
