--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ main header {
   align-items: center;
   padding-bottom: 20px;
   border-bottom: 1px solid #d4d4d4;
-  margin-bottom: 20px;
+  margin-bottom: 0;
 }
 
 main header h1 {
@@ -116,7 +116,7 @@ aside.side-nav {
 
 .modal {
   display: block;
-  display: none;
+  /* display: none; */
   position: fixed;
   top: 0;
   bottom: 0;
