--- a/src/index.css
+++ b/src/index.css
@@ -180,7 +180,7 @@ main header h1 {
 
 .modal {
   display: block;
-  /* display: none; */
+  display: none;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -331,6 +331,12 @@ main header h1 {
   border: 1px solid #548CAA;
 }
 
+.btn-cancel {
+  background: #fff;
+  color: #548CAA;
+  border: 1px solid #999;
+}
+
 .btn-save {
   border: 1px solid #35CC67;
   color:  #35CC67;
@@ -377,4 +383,24 @@ main header h1 {
 .closed {
   background: #bbb;
   color: #4B5B60;
+}
+
+/**************************/
+/*  Drag and Drop Stuff   */
+/**************************/
+
+.wip {
+  height: 100px;
+  background: orange;
+}
+
+.droppable {
+  height: 200px;
+  background: green;
+}
+
+.draggable {
+  background: pink;
+  margin: 10px;
+  padding: 10px;
 }
