ReportForm - expense details, adjusted styles

--- a/src/styles/reports.css
+++ b/src/styles/reports.css
@@ -210,3 +210,51 @@
   width: 100px;
 }
 
+.report-header:first-of-type {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.report-header:nth-child(2) {
+  display: flex;
+  justify-content: center;
+  font-size: 1.3em;
+  height: calc(1.5em + 20px);
+}
+
+.status-id-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.status-id-wrapper .status-label {
+  margin-right: 15px;
+}
+
+.status-id-wrapper .report-id span {
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+.assigned-expense-total {
+  
+}
+
+.assigned-expense-total {
+  margin: 0 0 15px;
+  text-align: right;
+}
+
+.assigned-expense-total:last-of-type {
+  margin-bottom: 0;
+}
+
+.drag-drop-wrapper {
+  margin-top: 20px;
+}
+
+.assigned-expense-total:nth-child(1) {
+  font-size: 1.5em;
+}
+
