--- a/src/index.css
+++ b/src/index.css
@@ -412,6 +412,8 @@ main header h1 {
   border-radius: 6px;
   margin: 10px;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .unassigned-expenses{
@@ -422,4 +424,5 @@ main header h1 {
 .selected-expenses {
 
 }
+
 
